Added Facebook icon to footer

--- a/apps.html
+++ b/apps.html
@@ -50,12 +50,6 @@
                             <a class="navbar-item" href="https://kingdomappsolutions.tech/websites.html">
                                 Website Development
                             </a>
-                            <!-- <a class="navbar-item" href="https://kingdomappsolutions.tech/tools.html">
-                                Online Tools
-                            </a>
-                            <a class="navbar-item" href="https://kingdomappsolutions.tech/graphic-design.html">
-                                Graphic Design
-                            </a> -->
                         </div>
                     </div>
 
@@ -272,51 +266,6 @@
                             </footer>
                         </div>
                     </div>
-                    <!-- <div class="column">
-                        <div class="card">
-                            <header class="card-header">
-                                <p class="card-header-title is-centered">
-                                    <i class="fa-solid fa-seedling"></i>
-                                    Simple Discipleship
-                                </p>
-                            </header>
-                            <div class="card-content">
-                                <div class="content">
-                                    Simple Discipleship is currently in production and is the companion app to Simple Evangelism. The app offers several simple discipleship methods that help believers make disciples who make disciples (Matt. 28:18-20). <br><br> Simple Discipleship will be offered in the app stores at a later date.
-                                </div>
-                            </div>
-                        </div>
-                    </div> -->
-                    <!-- <div class="column">
-                        <div class="card">
-                            <header class="card-header">
-                                <p class="card-header-title is-centered">
-                                    <i class="fa-solid fa-stethoscope"></i>
-                                    Worldview Diagnostic
-                                </p>
-                            </header>
-                            <div class="card-content">
-                                <div class="content">
-                                    The Missiopologetic Worldview Diagnostic is also currently in production. This app is a tool that aids in diagnosing a person's worldview so that the Christian witness can better understand the person and share the gospel in a more productive way. <br><br> This app will be available at a later date. Other theology and apologetic tools will be released online as well to aid in having a solid theological background and the ability to effectively defend the faith.
-                                </div>
-                            </div>
-                        </div>
-                    </div> -->
-                    <!-- <div class="column">
-                        <div class="card">
-                            <header class="card-header">
-                                <p class="card-header-title is-centered">
-                                    <i class="fa-solid fa-church"></i>
-                                    Church & Ministry
-                                </p>
-                            </header>
-                            <div class="card-content">
-                                <div class="content">
-                                    We are currently developing various church and ministry apps to aid missionaries in fundraising, a prayer log for Sunday school classes, and a sermon notes app to aid in remembering the weekly message. These apps are designed to help churches and ministries empower their members to stay engaged in praying for one another and to grow in their faith. <br><br> These apps, once completed, will be released in the app stores.
-                                </div>
-                            </div>
-                        </div>
-                    </div> -->
                 </div>
             </div>     
         </section>
@@ -339,15 +288,11 @@
                 </span>
                     Kingdom Application Solutions LLC | All Rights Reserved
             </p>
-            <!--<p>
-                <a class="facebook" href="https://www.facebook.com">
+            <p>
+                <a class="facebook" href="https://www.facebook.com/kingdomappsolutions" target="_blank">
                 <i class="fab fa-facebook-square"></i>
                 </a>
-                &nbsp;&nbsp;&nbsp;&nbsp;
-                <a class="twitter" href="https://www.twitter.com">
-                <i class="fab fa-twitter-square"></i>
-                </a>
-            </p>-->
+            </p>
             </div>
         </footer>
     </body>
