--- a/index.html
+++ b/index.html
@@ -50,12 +50,6 @@
                             <a class="navbar-item" href="https://kingdomappsolutions.tech/websites.html">
                                 Website Development
                             </a>
-                            <!-- <a class="navbar-item" href="https://kingdomappsolutions.tech/tools.html">
-                                Online Tools
-                            </a>
-                            <a class="navbar-item" href="https://kingdomappsolutions.tech/graphic-design.html">
-                                Graphic Design
-                            </a> -->
                         </div>
                     </div>
 
@@ -196,48 +190,6 @@
             </div>
         </section>
 
-        <!-- <section class="hero section-padding">
-            <div class="hero-body">
-                <div class="columns is-centered">
-                    <div class="column is-half">
-                        <img src="./images/tools.png" alt="Mobile apps">
-                    </div>
-                    <div class="column">
-                        <h2 class="subtitle privacy-h3">
-                            Online Software Products
-                        </h2>
-                        <h4 class="subtitle">
-                            We offer online software tools which are designed to bring you deeper into a relationship with Jesus Christ and give you the tools to lead others deeper as well. These online tools will be available through subscriptions (billed annually) for each of the available tools or in bundle deals.
-                        </h4>
-                        <a class="button info-button" href="https://kingdomappsolutions.tech/tools.html">
-                        <b>Learn More</b>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </section><hr>
-
-        <section class="hero section-padding">
-            <div class="hero-body">
-                <div class="columns is-centered">
-                    <div class="column is-half">
-                        <h2 class="subtitle privacy-h3">
-                            Graphic Design
-                        </h2>
-                        <h4 class="subtitle">
-                            We offer a wide range of graphic design options. Custom graphic design for your church or ministry can enable you to effectively communicate with your church, give out information about your church, and connect others with Jesus Christ.
-                        </h4>
-                        <a class="button info-button" href="https://kingdomappsolutions.tech/graphic-design.html">
-                            <b>Learn More</b>
-                        </a>
-                    </div><br>
-                    <div class="column">
-                        <img class="image-home" src="./images/design.png" alt="Website development">
-                    </div>
-                </div>
-            </div>
-        </section> -->
-
         <footer class="myfooter">
             <div class="content has-text-centered">
                 <div class="columns">
@@ -256,15 +208,11 @@
                 </span>
                     Kingdom Application Solutions LLC | All Rights Reserved
             </p>
-            <!--<p>
-                <a class="facebook" href="https://www.facebook.com">
+            <p>
+                <a class="facebook" href="https://www.facebook.com/kingdomappsolutions" target="_blank">
                 <i class="fab fa-facebook-square"></i>
                 </a>
-                &nbsp;&nbsp;&nbsp;&nbsp;
-                <a class="twitter" href="https://www.twitter.com">
-                <i class="fab fa-twitter-square"></i>
-                </a>
-            </p>-->
+            </p>
             </div>
         </footer>
     </body>
