--- a/privacy.html
+++ b/privacy.html
@@ -50,12 +50,6 @@
                             <a class="navbar-item" href="https://kingdomappsolutions.tech/websites.html">
                                 Website Development
                             </a>
-                            <!-- <a class="navbar-item" href="https://kingdomappsolutions.tech/tools.html">
-                                Online Tools
-                            </a>
-                            <a class="navbar-item" href="https://kingdomappsolutions.tech/graphic-design.html">
-                                Graphic Design
-                            </a> -->
                         </div>
                     </div>
 
@@ -99,7 +93,7 @@
             <div class="hero-body">
                 <div class="container">
                     <h1 class="title white-text">
-                        Kingdom Application Solutions LLC Privacy Policy
+                        Kingdom Application Solutions LLC <br> Privacy Policy
                     </h1>
                     <picture>
                         <source srcset="./images/header.webp" type="images/webp">
@@ -413,15 +407,11 @@
                 </span>
                     Kingdom Application Solutions LLC | All Rights Reserved
             </p>
-            <!--<p>
-                <a class="facebook" href="https://www.facebook.com">
+            <p>
+                <a class="facebook" href="https://www.facebook.com/kingdomappsolutions" target="_blank">
                 <i class="fab fa-facebook-square"></i>
                 </a>
-                &nbsp;&nbsp;&nbsp;&nbsp;
-                <a class="twitter" href="https://www.twitter.com">
-                <i class="fab fa-twitter-square"></i>
-                </a>
-            </p>-->
+            </p>
             </div>
         </footer>
     </body>
