--- a/products-services.html
+++ b/products-services.html
@@ -50,12 +50,6 @@
                             <a class="navbar-item" href="https://kingdomappsolutions.tech/websites.html">
                                 Website Development
                             </a>
-                            <!-- <a class="navbar-item" href="https://kingdomappsolutions.tech/tools.html">
-                                Online Tools
-                            </a>
-                            <a class="navbar-item" href="https://kingdomappsolutions.tech/graphic-design.html">
-                                Graphic Design
-                            </a> -->
                         </div>
                     </div>
 
@@ -115,7 +109,7 @@
                 <h2 class="subtitle privacy-h2">
                     Presently, we offer two main products and services at Kingdom Application Solutions LLC: mobile application development and website design and development for small businesses, non-profit organizations and individuals. We also produce our own line of mobile apps deployed to the app stores. Each of these products and services has the goal of helping others in some way and glorifying God through their creation. Click the link in each card below for more information for each of the products or services we offer.
                 </h2><br>
-                <div class="columns is-centered">
+                < class="columns is-centered">
                     <div class="column">
                         <div class="card">
                             <header class="card-header">
@@ -167,40 +161,6 @@
                         </div>
                     </div>
                 </div>
-
-                <!-- <div class="columns is-centered">
-                    <div class="column">
-                        <div class="card">
-                            <header class="card-header">
-                                <p class="card-header-title is-centered">
-                                    <i class="fa-solid fa-screwdriver-wrench"></i>
-                                    Online Software Tools
-                                </p>
-                            </header>
-                            <div class="card-content">
-                                <div class="content">
-                                    Online software tools that foster discipleship, allow individuals to grow in their faith, and give churches and other Christian ministries the tools necessary for various ministry tasks are also offered by Kingdom Application Solutions LLC. These tools are still in production and will be released at a later time, but you can click <a href="https://kingdomappsolutions.tech/tools.html"><u>here</u></a> to learn more about the various tools we will offer as well as their pricing structures. 
-                                </div>
-                            </div>
-                        </div>
-                    </div> -->
-
-                    <!-- <div class="column">
-                        <div class="card">
-                            <header class="card-header">
-                                <p class="card-header-title is-centered">
-                                    <i class="fa-solid fa-compass-drafting"></i>
-                                    Graphic Design
-                                </p>
-                            </header>
-                            <div class="card-content">
-                                <div class="content">
-                                    Graphic design that gives your church or ministry its distinctive look and feel. Whether you need a logo, printable graphics, or social media graphics, we can help! Quality graphic work allows your church or ministry to stand apart from the rest and make a greater impact for the kingdom! Click <a href="https://kingdomappsolutions.tech/graphic-design.html"><u>here</u></a> to learn more about our graphic design options.
-                                </div>
-                            </div>
-                        </div>
-                    </div> -->
-                </div>
             </div>
         </section>
 
@@ -222,15 +182,11 @@
                 </span>
                     Kingdom Application Solutions LLC | All Rights Reserved
             </p>
-            <!--<p>
-                <a class="facebook" href="https://www.facebook.com">
+            <p>
+                <a class="facebook" href="https://www.facebook.com/kingdomappsolutions" target="_blank">
                 <i class="fab fa-facebook-square"></i>
                 </a>
-                &nbsp;&nbsp;&nbsp;&nbsp;
-                <a class="twitter" href="https://www.twitter.com">
-                <i class="fab fa-twitter-square"></i>
-                </a>
-            </p>-->
+            </p>
             </div>
         </footer>
     </body>
