--- a/websites.html
+++ b/websites.html
@@ -50,12 +50,6 @@
                             <a class="navbar-item is-active" href="https://kingdomappsolutions.tech/websites.html">
                                 Website Development
                             </a>
-                            <!-- <a class="navbar-item" href="https://kingdomappsolutions.tech/tools.html">
-                                Online Tools
-                            </a>
-                            <a class="navbar-item" href="https://kingdomappsolutions.tech/graphic-design.html">
-                                Graphic Design
-                            </a> -->
                         </div>
                     </div>
 
@@ -182,15 +176,11 @@
                 </span>
                     Kingdom Application Solutions LLC | All Rights Reserved
             </p>
-            <!--<p>
-                <a class="facebook" href="https://www.facebook.com">
+            <p>
+                <a class="facebook" href="https://www.facebook.com/kingdomappsolutions" target="_blank">
                 <i class="fab fa-facebook-square"></i>
                 </a>
-                &nbsp;&nbsp;&nbsp;&nbsp;
-                <a class="twitter" href="https://www.twitter.com">
-                <i class="fab fa-twitter-square"></i>
-                </a>
-            </p>-->
+            </p>
             </div>
         </footer>
     </body>
