Changed name on navbar & in contact form

--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
                 
                         <div class="navbar-dropdown">
                             <a class="navbar-item" href="https://kingdomappsolutions.tech/apps.html">
-                                Mobile Apps
+                                Mobile App Development
                             </a>
                             <a class="navbar-item" href="https://kingdomappsolutions.tech/websites.html">
                                 Website Development
@@ -133,7 +133,7 @@
                         <div class="control">
                             <div class="select is-info">
                                 <select name="Option" size="1">
-                                    <option>Mobile Apps
+                                    <option>Mobile App Development
                                     </option>
                                     <option>Website Development
                                     </option>
