--- a/mission-vision-values.html
+++ b/mission-vision-values.html
@@ -45,7 +45,7 @@
                 
                         <div class="navbar-dropdown">
                             <a class="navbar-item" href="https://kingdomappsolutions.tech/apps.html">
-                                Mobile Apps
+                                Mobile App Development
                             </a>
                             <a class="navbar-item" href="https://kingdomappsolutions.tech/websites.html">
                                 Website Development
