--- a/about.html
+++ b/about.html
@@ -107,7 +107,7 @@
         <section class="hero section-padding">
             <div class="hero-body">
                 <h2 class="subtitle privacy-h2">
-                    Kingdom Application Solutions LLC is a software development company that strives to glorify God through the creation and distribution of quality mobile apps and quality website design & development for small businesses, non-profit organizations, and individuals.
+                    Kingdom Application Solutions LLC is a software development company that strives to glorify God through the creation and distribution of quality mobile apps and quality website design & development for churches, ministries, missionaries, and religious non-profit organizations.
 
                     Our goal is to provide quality mobile apps and website development either through a content management system or with custom HTML to deploy to your domain. Our user-friendly mobile apps will be deployed on both the Google Play Store and the Apple App Store and our websites are hosted on a fast server with little to no downtime.
                 </h2><br>
@@ -116,7 +116,7 @@
                 </h1>
                 <p></p>
                 <h2 class="subtitle privacy-h2">
-                    My name is Justin Owens. I am a former missionary in Estonia and Ukraine and former pastor in Texas. I have been developing for the web since the early 2000s and have been deploying mobile apps since 2019. I have designed multiple websites and managed content management systems for ministry organizations as well as deployed a number of mobile apps to the Google Play Store and the Apple App Store. I am passionate about designing quality mobile apps and developing user-friendly websites that glorify God and help people!
+                    My name is Justin Owens. I am a former missionary in Estonia and Ukraine and former pastor in Texas. I have been developing for the web since the early 2000s and have been deploying mobile apps since 2019. I have designed multiple websites and managed content management systems for ministry organizations as well as deployed a number of mobile apps to the Google Play Store and the Apple App Store. I am passionate about designing quality mobile apps and developing user-friendly websites that glorify God and help bring people to Jesus!
                 </h2><br>
                 <div class="columns is-centered">
                     <div class="column is-half">
