--- a/apps.html
+++ b/apps.html
@@ -107,7 +107,7 @@
         <section class="hero section-padding">
             <div class="hero-body">
                 <h2 class="subtitle privacy-h2">
-                    Mobile app development is one of the chief services offered by Kingdom Application Solutions LLC. With the proclivity of mobile phones and their use, mobile apps and mobile software products are used by people around the world. Our aim is to bring mobile app development to small businesses and non-profit organizations at an affordable price. Often mobile app development costs several thousand dollars which smaller organizations cannot cover. Our pricing packages seek to bridge the gap between having no mobile app and the high-priced apps.
+                    Mobile app development is one of the chief services offered by Kingdom Application Solutions LLC. With the proclivity of mobile phones and their use, mobile apps and mobile software products are used by people around the world. Our aim is to bring mobile app development to churches, ministries, missionaries, and religious non-profit organizations at an affordable price. Often mobile app development costs several thousand dollars which smaller organizations cannot cover. Our pricing packages seek to bridge the gap between having no mobile app and the high-priced apps.
                 </h2><br>
                 <p></p>
                 <h1 class="title">
@@ -115,7 +115,7 @@
                 </h1>
                 <p></p>
                 <h2 class="subtitle privacy-h2">
-                    A custom mobile app for your organization can enable you to effectively communicate with your target area, niche, or within your organization. Listed below are the custom app development packages Kingdom Application Solutions LLC offers to get your mobile app up and running and deployed to both major app stores. Contact us through the contact page if you are interested in custom app development.
+                    A custom mobile app for your organization can enable you to effectively communicate with your congregation, ministry target area, mission field, or within your non-profit organization. Listed below are the custom app development packages Kingdom Application Solutions LLC offers to get your mobile app up and running and deployed to both major app stores. Contact us through the contact page if you are interested in custom app development.
                 </h2><br>
                 <div class="columns">
                     <div class="column">
@@ -195,7 +195,7 @@
                 </h1>
                 <p></p>
                 <h2 class="subtitle privacy-h2">
-                    Kingdom Application Solutions LLC also produces its own mobile apps deployed to the app stores. Our apps seek to provide answers to problems our users face whether it be technical issues, health related, or organizationally related as well as provide entertainment value through games. Listed below are a sampling of our current app products available.
+                    Kingdom Application Solutions LLC also produces its own mobile apps deployed to the app stores. Our apps seek to provide solutions to problems our users face whether it be church or ministry-related issues, apps for missionaries, or providing entertainment value through games. Listed below are a sampling of our current app products available.
                 </h2><br>
                 <div class="columns">
                     <div class="column is-half">
