--- a/success.html
+++ b/success.html
@@ -96,7 +96,7 @@
                 </h1>
                 <p></p>
                 <h2 class="subtitle">
-                    Thank you for contacting us! We will contact you as soon as possible regarding your request!
+                    Thank you for contacting us! We will contact you as soon as possible regarding your request! God bless you and your work for the kingdom!
                 </h2>
             </div>
         </section>
