--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                             Who We Are
                         </h2>
                         <h4 class="subtitle justify">
-                            We are a web & mobile software development company that strives to glorify God through the creation and distribution of quality mobile apps and website design & development for small businesses, non-profit organizations, and individuals. 
+                            We are a web & mobile software development company that strives to glorify God through the creation and distribution of quality mobile apps and website design & development for churches, ministries, missionaries, and other religious non-profit organizations. 
                         </h4>
                         <h4 class="subtitle">
                             Our four core values are:
@@ -155,7 +155,7 @@
                             Mobile Apps
                         </h2>
                         <h4 class="subtitle justify">
-                            We offer mobile app development for small business and non-profit organizations at an affordable price. Our goal is to bring mobile app development to those who otherwise would not be able to afford it. Our pricing packages seek to bridge the gap between having no mobile app and the high-priced apps. <br><br> Along with mobile app development, we also develop and deploy our own app solutions that solve problems, try to make life easier, and provide entertainment. These apps cover a wide range of genres including tech, church/ministry, health, and games. Most of our apps are free with subscription options for more features. Each of our mobile apps are developed for both Android and Apple and deployed to the Google Play Store and the Apple App Store.
+                            We offer mobile app development for churches, ministries, missionaries, and other religious non-profit organizations at an affordable price. Our goal is to bring mobile app development to those who otherwise would not be able to afford it. Our pricing packages seek to bridge the gap between having no mobile app and the high-priced apps. <br><br> Along with mobile app development, we also develop and deploy our own app solutions that provide solutions to common ministry-related problems as well as providing entertainment value. These apps cover a wide range of genres including ministry, missions, and some games. Most of our apps are free with subscription options for more features. Each of our mobile apps are developed for both Android and Apple and deployed to the Google Play Store and the Apple App Store.
                         </h4>
                         <a class="button info-button" href="https://kingdomappsolutions.tech/apps.html">
                         <b>About Mobile App Development</b>
@@ -173,7 +173,7 @@
                             Website Development
                         </h2>
                         <h4 class="subtitle justify">
-                            We offer the design and development of custom websites for anyone interested in having a quality-made website. We also offer the creation of websites through a content manangement option. Our website development service is a monthly charge that includes development and site maintenance.
+                            We offer the design and development of custom websites for any church, ministry, missionary/church planter, or religious non-profit interested in having a quality-made website. We also offer the creation of websites through a content manangement option. Our website development service is a monthly charge that includes development and site maintenance.
                         </h4>
                         <a class="button info-button" href="https://kingdomappsolutions.tech/websites.html">
                             <b>About Website Development</b>
