--- a/mission-vision-values.html
+++ b/mission-vision-values.html
@@ -110,14 +110,14 @@
                 </h1>
                 <p></p>
                 <h2 class="subtitle">
-                    Kingdom Application Solutions LLC exists to glorify God through the creation and distribution of quality mobile apps and website design & development for small businesses, non-profit organizations, and individuals. 
+                    Kingdom Application Solutions LLC exists to glorify God through the creation and distribution of quality mobile apps and website design & development for churches, ministries, missionaries, and religious non-profit organizations.
                 </h2><br><hr>
                 <h1 class="title">
                     Our Vision
                 </h1>
                 <p></p>
                 <h2 class="subtitle">
-                    Kingdom Application Solutions LLC envisions a global impact from its mobile apps and website design and development. We envision aiding small businesses,  non-profit organizations, and individuals in accomplishing their goals through quality web & mobile software development. 
+                    Kingdom Application Solutions LLC envisions a global impact from its mobile apps and website design and development. We envision aiding churches, ministries, missionaries, and other religious non-profit organizations in reaching the world for Christ and bringing people into a saving relationship with Him through quality web & mobile software development. 
                 </h2><br><hr>
                 <h1 class="title">
                     Our Values
@@ -150,7 +150,7 @@
                             </header>
                             <div class="card-content">
                                 <div class="content">
-                                    Integrity and honesty are two sides of the same coin. To have integrity is to be honest and have strong moral principles. Integrity creates trust. When customers place their trust in us, it is because of our goal to maintain strong integrity and honesty. We will act in a trustworthy manner that earns the respect of our clients.
+                                    Integrity and honesty are two sides of the same coin. To have integrity is to be honest and have strong moral principles. Integrity creates trust. When clients place their trust in us, it is because of our goal to maintain strong integrity and honesty. We will act in a trustworthy manner that earns the respect of our clients.
                                 </div>
                             </div>
                         </div>
@@ -164,7 +164,7 @@
                             </header>
                             <div class="card-content">
                                 <div class="content">
-                                    Our company exists to help small businesses, non-profit organizations, and individuals have access to quality made websites and mobile apps. We make every decision and measure every outcome based on how well it serves our clients. We listen to our clients’ needs, provide options, and deliver beyond their expectations.
+                                    Our company exists to help churches, ministries, missionaries, and religious non-profit organizations to have access to quality made websites and mobile apps. We make every decision and measure every outcome based on how well it serves our clients and how it builds the Kingdom. We listen to our clients’ needs, provide options, and deliver beyond their expectations.
                                 </div>
                             </div>
                         </div>
@@ -178,7 +178,7 @@
                             </header>
                             <div class="card-content">
                                 <div class="content">
-                                    Accountability is about staying true to our word. It means we do what we say we’re going to do. If something happens to prevent that, we determine the new course and communicate quickly. We believe that accepting responsibility for your actions (and inactions) is the ultimate way to build trust.
+                                    Accountability is about staying true to our word. It means we do what we say we’re going to do. If something happens to prevent that, we determine the new course and communicate quickly. We believe that accepting responsibility for your actions (and inactions) is the ultimate way to build trust and also exemplifies our committment to glorify God through our work.
                                 </div>
                             </div>
                         </div>
