--- a/websites.html
+++ b/websites.html
@@ -93,7 +93,7 @@
             <div class="hero-body">
                 <div class="container">
                     <h1 class="title white-text">
-                        Quality Websites Built for Your Organization in Mind!
+                        Quality Websites Built for Your Ministry in Mind!
                     </h1>
                     <picture>
                         <source srcset="./images/header.webp" type="images/webp">
@@ -107,11 +107,11 @@
         <section class="hero section-padding">
             <div class="hero-body">
                 <h2 class="subtitle privacy-h2">
-                    Along with mobile apps, website development is one of the primary services Kingdom Application Solutions LLC offers. A website is the first place people will visit when checking out an organization so it is a vital piece of any organization's marketing plan. Websites should look nice not only on a computer, but also on mobile phones. We develop "mobile-first" knowing that many people will use their mobile devices when searching for an organization's web presence. A well-made website illustrates to others that you take their business seriously.
+                    Along with mobile apps, website development is one of the primary services Kingdom Application Solutions LLC offers. A website is the first place people will visit when checking out a church, mission, or religious non-profit organization so it is a vital piece of any organization's marketing plan. Websites should look nice not only on a computer, but also on mobile phones. We develop "mobile-first" knowing that many people will use their mobile devices when searching for an organization's web presence. A well-made website illustrates to others that you take their business seriously.
                 </h2>
                 <p></p>
                 <h2 class="subtitle privacy-h2">
-                    A custom website for your small business, non-profit organization, or personal website can enable you to effectively communicate with your target area, niche, or customers. Listed below are the two website development service packages Kingdom Application Solutions LLC offers to get your organizational website up and running. You can choose from a simple content management system (CMS) or opt for a more robust, custom website that increases search engine optimization and other website metrics to get your organization noticed. Contact us through the contact page if you are interested in website development for your organization.
+                    A custom website for your church, ministry, mission, or religious non-profit organization can enable you to effectively communicate with your congregation, ministry target area, mission field, or donors. Listed below are the two website development service packages Kingdom Application Solutions LLC offers to get your organizational website up and running. You can choose from a simple content management system (CMS) or opt for a more robust, custom website that increases search engine optimization and other website metrics to get your organization noticed. Contact us through the contact page if you are interested in website development for your organization.
                 </h2><br>
                 <h1 class="title">
                     Pricing
