--- a/apps.html
+++ b/apps.html
@@ -39,8 +39,8 @@
                     </a>
 
                     <div class="navbar-item has-dropdown is-hoverable">
-                        <a class="navbar-link is-active" href="https://kingdomappsolutions.tech/products-services.html">
-                            Products & Services
+                        <a class="navbar-link is-active" href="https://kingdomappsolutions.tech/services.html">
+                            Services
                         </a>
                 
                         <div class="navbar-dropdown">
@@ -107,7 +107,7 @@
         <section class="hero section-padding">
             <div class="hero-body">
                 <h2 class="subtitle privacy-h2">
-                    Mobile app development is one of the chief services offered by Kingdom Application Solutions LLC. With the proclivity of mobile phones and their use, mobile apps and mobile software products are used by people around the world. Our aim is to bring mobile app development to churches, ministries, missionaries, and religious non-profit organizations at an affordable price. Often mobile app development costs several thousand dollars which smaller organizations cannot cover. Our pricing packages seek to bridge the gap between having no mobile app and the high-priced apps.
+                    Hybrid mobile app development is one of the chief services offered by Kingdom Application Solutions LLC. With the proclivity of mobile phones and their use, mobile apps and mobile software products are used by people around the world. Our aim is to bring mobile app development to churches, ministries, missionaries, and religious non-profit organizations at an affordable price. Often mobile app development costs tens of thousands of dollars which smaller organizations cannot cover. Our pricing packages seek to bridge the gap between having no mobile app and the high-priced apps.
                 </h2><br>
                 <p></p>
                 <h1 class="title">
@@ -130,7 +130,7 @@
                                 <div class="content">
                                     <h3>Free initial consultation and quote!</h3>
                                     <h3><b>$500 initial deposit</b></h3>
-                                    <h3><b>$100 per month to develop for both <br> Android and iOS</b></h3>
+                                    <h3><b>$150 per month to develop for both <br> Android and iOS</b></h3>
                                     <h3><b>$500 final payment upon deployment</b></h3>
                                     <h3>Deployment to the app stores</h3>
                                     <h3>Simple app consisting of up to three (3) pages <br> with tab navigation</h3>
@@ -154,7 +154,7 @@
                                 <div class="content">
                                     <h3>Free initial consultation and quote!</h3>
                                     <h3><b>$500 initial deposit</b></h3>
-                                    <h3><b>$150 per month to develop for both <br> Android and iOS</b></h3>
+                                    <h3><b>$200 per month to develop for both <br> Android and iOS</b></h3>
                                     <h3><b>$500 final payment upon deployment</b></h3>
                                     <h3>Deployment to the app stores</h3>
                                     <h3>Up to ten (10) pages with option <br> for side menu navigation as well as tabs</h3>
@@ -178,7 +178,7 @@
                                 <div class="content">
                                     <h3>Free initial consultation and quote!</h3>
                                     <h3><b>$500 initial deposit</b></h3>
-                                    <h3><b>$200 per month to develop for both <br> Android and iOS</b></h3>
+                                    <h3><b>$250 per month to develop for both <br> Android and iOS</b></h3>
                                     <h3><b>$500 final payment upon deployment</b></h3>
                                     <h3>Deployment to the app stores</h3>
                                     <h3>More than ten (10) pages with <br> any navigation option</h3>
