--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                     </a>
 
                     <div class="navbar-item has-dropdown is-hoverable">
-                        <a class="navbar-link" href="https://kingdomappsolutions.tech/products-services.html">
-                            Products & Services
+                        <a class="navbar-link" href="https://kingdomappsolutions.tech/services.html">
+                            Services
                         </a>
                 
                         <div class="navbar-dropdown">
@@ -155,7 +155,7 @@
                             Mobile Apps
                         </h2>
                         <h4 class="subtitle justify">
-                            We offer mobile app development for churches, ministries, missionaries, and other religious non-profit organizations at an affordable price. Our goal is to bring mobile app development to those who otherwise would not be able to afford it. Our pricing packages seek to bridge the gap between having no mobile app and the high-priced apps. <br><br> Along with mobile app development, we also develop and deploy our own app solutions that provide solutions to common ministry-related problems as well as providing entertainment value. These apps cover a wide range of genres including ministry, missions, and some games. Most of our apps are free with subscription options for more features. Each of our mobile apps are developed for both Android and Apple and deployed to the Google Play Store and the Apple App Store.
+                            We offer hybrid mobile app development for churches, ministries, missionaries, and other religious non-profit organizations at an affordable price. Our goal is to bring mobile app development to those who otherwise would not be able to afford it. Our pricing packages seek to bridge the gap between having no mobile app and the high-priced apps. <br><br> Along with mobile app development, we also develop and deploy our own app solutions that provide solutions to common ministry-related problems as well as providing entertainment value. These apps cover a wide range of genres including ministry, missions, and some games. Most of our apps are free with subscription options for more features. Each of our mobile apps are developed for both Android and Apple and deployed to the Google Play Store and the Apple App Store.
                         </h4>
                         <a class="button info-button" href="https://kingdomappsolutions.tech/apps.html">
                         <b>About Mobile App Development</b>
