--- a/websites.html
+++ b/websites.html
@@ -39,8 +39,8 @@
                     </a>
 
                     <div class="navbar-item has-dropdown is-hoverable">
-                        <a class="navbar-link is-active" href="https://kingdomappsolutions.tech/products-services.html">
-                            Products & Services
+                        <a class="navbar-link is-active" href="https://kingdomappsolutions.tech/services.html">
+                            Services
                         </a>
                 
                         <div class="navbar-dropdown">
@@ -128,8 +128,11 @@
                             <div class="card-content">
                                 <div class="content">
                                     <h3>Free initial consultation!</h3>
-                                    <h3>$100 monthly service which includes: <br><br> <b>Website Development, Graphic Design, <br> and Periodic Updates</b></h3>
-                                    <h3>$500 initial deposit which includes domain setup and hosting fees for one year</h3>
+                                    <h3>$500 initial deposit</h3>
+                                    <h3>$500 final payment upon deployment</h3>
+                                    <h3>$150 monthly service which includes: <br><br> <b>Website Development, Graphic Design, Domain Setup, Hosting Fees for One Year, and Periodic Updates</b></h3>
+                                    <h3>Ten (10) page limit</h3>
+                                    <h3>$100 per page for development <br> over the 10 page limit</h3>
                                     <h3>$100 per year for hosting renewal</h3>
                                 </div>
                             </div>
@@ -147,8 +150,10 @@
                             <div class="card-content">
                                 <div class="content">
                                     <h3>Free initial consultation!</h3>
-                                    <h3>$200 monthly service which includes: <br><br> <b>Website Development, Graphic Design, Search Engine Optimization, Increased Performance, and Periodic Updates</b></h3>
-                                    <h3>$500 initial deposit which includes domain setup and hosting fees for one year</h3>
+                                    <h3>$500 initial deposit</h3>
+                                    <h3>$500 final payment upon deployment</h3>
+                                    <h3>$200 monthly service which includes: <br><br><b>Website Development, Graphic Design, Search Engine Optimization, Increased Performance, Domain Setup, Hosting Fees for One Year, and Periodic Updates</b></h3>
+                                    <h3>Unlimited pages</h3>
                                     <h3>$100 per year for hosting renewal</h3>
                                 </div>
                             </div>
