--- a/mission-vision-values.html
+++ b/mission-vision-values.html
@@ -39,8 +39,8 @@
                     </a>
 
                     <div class="navbar-item has-dropdown is-hoverable">
-                        <a class="navbar-link" href="https://kingdomappsolutions.tech/products-services.html">
-                            Products & Services
+                        <a class="navbar-link" href="https://kingdomappsolutions.tech/services.html">
+                            Services
                         </a>
                 
                         <div class="navbar-dropdown">
