--- a/services.html
+++ b/services.html
@@ -39,8 +39,8 @@
                     </a>
 
                     <div class="navbar-item has-dropdown is-hoverable">
-                        <a class="navbar-link is-active" href="https://kingdomappsolutions.tech/products-services.html">
-                            Products & Services
+                        <a class="navbar-link is-active" href="https://kingdomappsolutions.tech/services.html">
+                            Services
                         </a>
                 
                         <div class="navbar-dropdown">
@@ -93,7 +93,7 @@
             <div class="hero-body">
                 <div class="container">
                     <h1 class="title white-text">
-                        The Products and Services We Offer
+                        Our Services
                     </h1>
                     <picture>
                         <source srcset="./images/header.webp" type="images/webp">
@@ -107,7 +107,7 @@
         <section class="hero section-padding">
             <div class="hero-body">
                 <h2 class="subtitle privacy-h2">
-                    Presently, we offer two main products and services at Kingdom Application Solutions LLC: mobile application development and website design and development for churches, ministries, missionaries, and religious non-profit organizations. We also produce our own line of mobile apps deployed to the app stores. Each of these products and services has the goal of advancing the kingdom and glorifying God through their creation. Click the link in each card below for more information for each of the products or services we offer.
+                    Presently, we offer two main services at Kingdom Application Solutions LLC: hybrid mobile application development and website design and development for churches, ministries, missionaries, and religious non-profit organizations. We also produce our own line of mobile apps deployed to the app stores. Each of these services has the goal of advancing the kingdom and glorifying God through their creation. Click the link in each card below for more information for each of the services we offer.
                 </h2><br>
                 <div class="columns is-centered">
                     <div class="column">
@@ -120,7 +120,7 @@
                             </header>
                             <div class="card-content">
                                 <div class="content justify">
-                                    We offer mobile app development for churches, ministries, missionaries, and religious non-profit organizations that wouldn't otherwise be able to have a mobile app presense. Our aim is to bring mobile app development to your organization at an affordable price.
+                                    We offer hybrid mobile app development for churches, ministries, missionaries, and religious non-profit organizations that wouldn't otherwise be able to have a mobile app presense. Our aim is to bring quality mobile app development to your organization at an affordable price.
                                     
                                     Click the link to see more information about pricing for <u><a href="https://kingdomappsolutions.tech/apps.html">custom mobile app development</a></u>. <br><br> For examples of the apps we currently offer, click the buttons below to be taken to the respective app store pages.<br>
                                 </div>
